Fixed spacing issues re: HouseProfile (close button margins, add-to-favourites button alignment)

--- a/NewFrontEnd/src/assets/sass/components/_HouseProfile.scss
+++ b/NewFrontEnd/src/assets/sass/components/_HouseProfile.scss
@@ -91,10 +91,10 @@
   display: block;
   width: 41px;
   height: 41px;
-  margin: 10px 0px 0px 10px;
   background-color: white;
   border-radius: 50%;
   z-index: 2;
+  margin: 10px 0px 0px 10px !important;
 }
 
 .house-profile-map {
